syntax = "proto3";
package authapi;
option go_package = "/authapi";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {}
